created divs in index

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>Pinterest Clone</title>
 </head>
 <body>
-    kjnkj
+    <div class="main-container">
+        <div class="navbar">
+            <div class="logo">
+                Pinterest
+            </div>
+        </div>
+    </div>
 </body>
 </html>
