--- a/index.html
+++ b/index.html
@@ -4,14 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pinterest Clone</title>
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-    <div class="main-container">
-        <div class="navbar">
-            <div class="logo">
-                Pinterest
-            </div>
-        </div>
+    <nav>
+        <a href="#" class="logo"><img src="/images/pin-logo.png"></a>
+        <a href="#" class="active">Home</a>
+        <a href="#">Explore</a>
+        <a href="#">Create</a>
+        <input type="text" class="search-bar" placeholder="Search">
+        <a href="#" class="icon"><img src="/images/notif-icon.png"></a>
+        <a href="#" class="icon"><img src="/images/message-icon.png"></a>
+        <a href="#" class="icon"><img src="/images/avatar.jpg"></a>
+    </nav>
+    <div class="loader"></div>
+    <div class="container">
+        <div class="col"></div>
+        <div class="col"></div>    
+        <div class="col"></div>    
+        <div class="col"></div>    
+        <div class="col"></div>        
     </div>
 </body>
 </html>
