--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pinterest Clone</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="TechAlpha_PinterestClone/style.css">
 </head>
 <body>
     <nav>
