--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 </head>
 <body>
     <nav>
-        <a href="#" class="logo"><img src="/images/pin-logo.png"></a>
+        <a href="#" class="logo"><img src="TechAlpha_PinterestClone/images/pin-logo.png"></a>
         <a href="#" class="active">Home</a>
         <a href="#">Explore</a>
         <a href="#">Create</a>
         <input type="text" class="search-bar" placeholder="Search">
-        <a href="#" class="icon"><img src="/images/notif-icon.png"></a>
-        <a href="#" class="icon"><img src="/images/message-icon.png"></a>
-        <a href="#" class="icon"><img src="/images/avatar.jpg"></a>
+        <a href="#" class="icon"><img src="TechAlpha_PinterestClone/images/notif-icon.png"></a>
+        <a href="#" class="icon"><img src="TechAlpha_PinterestClone/images/message-icon.png"></a>
+        <a href="#" class="icon"><img src="TechAlpha_PinterestClone/images/avatar.jpg"></a>
     </nav>
     <div class="loader"></div>
     <div class="container">
