added javascript for infinte image generation

--- a/index.html
+++ b/index.html
@@ -17,13 +17,91 @@
         <a href="#" class="icon"><img src="/images/message-icon.png"></a>
         <a href="#" class="icon"><img src="/images/avatar.jpg"></a>
     </nav>
-    <div class="loader"></div>
-    <div class="container">
+    <div id="loader" class="loader"></div>
+    <div id="container" class="container">
         <div class="col"></div>
         <div class="col"></div>    
         <div class="col"></div>    
         <div class="col"></div>    
         <div class="col"></div>        
     </div>
+
+    <script>
+        let page = 1;
+        let fetching = false;
+        const container = document.getElementById('container');
+        const cols = Array.from(container.getElementsByClassName('col'));
+        console.log(cols);
+
+        const fetchImageData = async () => {
+            try {
+                fetching = true;
+                document.getElementById('loader').style.display = 'block';
+                const response = await fetch('https://dog.ceo/api/breeds/image/random/60');
+                const data = await response.json();
+                fetching = false;
+                return data.message;
+
+            } catch (error){
+                console.error('Error fetching data: ', error);
+                fetching = false;
+                throw error;
+            }
+        };
+
+        fetchImageData().then((images) => {
+            if (images.length > 0) {
+                images.forEach((image, index) => {
+                    createCard(image, cols[index % cols.length]);
+                    console.log(index % cols.length);
+                });
+            }
+        }).catch((error) => {
+            console.error("Error initial fetch:", error);
+        });
+
+        const createCard = (image, col) => {
+            const card = document.createElement('div');
+            card.classList.add('card');
+            const img = document.createElement('img');
+            img.src = image;
+            img.alt = "Random Dog Image";
+            img.style.width = "100%";
+            img.onerror = function () {
+                this.parentElement.style.display = "none";
+            };
+            img.onload = function () {
+                document.getElementById('loader').style.display = "none";
+            };
+            card.appendChild(img);
+            col.appendChild(card);
+        };
+
+
+
+        const handleScroll = () => {
+            if(fetching) return;
+
+            const scrollTop = window.pageXOffset || document.documentElement.scrollTop;
+            const windowHeight = window.innerHeight;
+            const bodyHeight = document.documentElement.scrollHeight;
+
+            if (bodyHeight - scrollTop - windowHeight <800) {
+                page++;
+                fetchImageData().then((image) => {
+                    if (image.length > 0) {
+                        image.forEach((image, index) => {
+                            createCard(image, cols[index % cols.length]);
+                        });
+                    }
+                }).catch((error) => {
+                    console.error("Error handling scroll:", error);
+                });
+            }
+        };
+
+        window.addEventListener('scroll', handleScroll);
+
+    </script>
 </body>
 </html>
